[package]
name = "rsdp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"]}
actix-web = "4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
csv = "1"
clap = { version = "4", features = ["derive"]}
actix-multipart = "0.6"
futures-util = "0.3"